; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2443/extr_clock.c_s3c2443_setrate_i2s_eplldiv.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2443/extr_clock.c_s3c2443_setrate_i2s_eplldiv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@S3C2443_CLKDIV1 = common dso_local global i32 0, align 4
@S3C2443_CLKDIV1_I2SDIV_MASK = common dso_local global i64 0, align 8
@S3C2443_CLKDIV1_I2SDIV_SHIFT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk*, i64)* @s3c2443_setrate_i2s_eplldiv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s3c2443_setrate_i2s_eplldiv(%struct.clk* %0, i64 %1) #0 {
  %3 = alloca %struct.clk*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.clk* %0, %struct.clk** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.clk*, %struct.clk** %3, align 8
  %8 = getelementptr inbounds %struct.clk, %struct.clk* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @clk_get_rate(i32 %9)
  store i64 %10, i64* %5, align 8
  %11 = load i32, i32* @S3C2443_CLKDIV1, align 4
  %12 = call i64 @__raw_readl(i32 %11)
  store i64 %12, i64* %6, align 8
  %13 = load %struct.clk*, %struct.clk** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i64 @s3c2443_roundrate_clksrc16(%struct.clk* %13, i64 %14)
  store i64 %15, i64* %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %4, align 8
  %18 = udiv i64 %16, %17
  store i64 %18, i64* %4, align 8
  %19 = load i64, i64* @S3C2443_CLKDIV1_I2SDIV_MASK, align 8
  %20 = xor i64 %19, -1
  %21 = load i64, i64* %6, align 8
  %22 = and i64 %21, %20
  store i64 %22, i64* %6, align 8
  %23 = load i64, i64* %4, align 8
  %24 = sub i64 %23, 1
  %25 = load i64, i64* @S3C2443_CLKDIV1_I2SDIV_SHIFT, align 8
  %26 = shl i64 %24, %25
  %27 = load i64, i64* %6, align 8
  %28 = or i64 %27, %26
  store i64 %28, i64* %6, align 8
  %29 = load i64, i64* %6, align 8
  %30 = load i32, i32* @S3C2443_CLKDIV1, align 4
  %31 = call i32 @__raw_writel(i64 %29, i32 %30)
  ret i32 0
}

declare dso_local i64 @clk_get_rate(i32) #1

declare dso_local i64 @__raw_readl(i32) #1

declare dso_local i64 @s3c2443_roundrate_clksrc16(%struct.clk*, i64) #1

declare dso_local i32 @__raw_writel(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
